--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -1,8 +1,8 @@
 Vagrant.configure("2") do |config|
     config.vm.box = "centos/7"
-    config.vm.hostname = "abenaniS"
+    config.vm.hostname = "user"
     config.vm.provider "virtualbox" do |vb|
-        vb.name = "abenaniS"
+        vb.name = "user"
         vb.memory = 3072
     end
     config.vm.network "private_network", ip: "192.168.42.110"
